// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageRow Nastaliq rendering — dark theme renders the full language list including the Nastaliq row 1`] = `
<View
  testID="screen"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingHorizontal": 20,
        "paddingTop": 20,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Inter_800ExtraBold",
              "fontSize": 24,
            },
            {
              "color": "#F9FAFB",
            },
          ]
        }
      >
        Choose a language
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_600SemiBold",
              "fontSize": 13,
              "marginTop": 4,
            },
            {
              "color": "#9CA3AF",
            },
          ]
        }
      >
        Tap a language to switch. Each one keeps its own progress.
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_600SemiBold",
              "fontSize": 13,
              "marginTop": 4,
            },
            {
              "color": "#9CA3AF",
            },
          ]
        }
      >
        Locked languages start with a free taste. All-Access opens the rest.
      </Text>
    </View>
    <View
      accessibilityLabel="Close"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          },
          {
            "backgroundColor": "#252530",
          },
        ]
      }
    >
      <View
        color="#F9FAFB"
        name="x"
        size={20}
      />
    </View>
  </View>
  <View
    style={
      {
        "paddingBottom": 4,
        "paddingHorizontal": 20,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 8,
            "height": 42,
            "paddingHorizontal": 12,
          },
          {
            "backgroundColor": "#252530",
            "borderColor": "#2D2D3D",
          },
        ]
      }
    >
      <View
        color="#9CA3AF"
        name="search"
        size={16}
      />
      <TextInput
        autoCapitalize="none"
        autoCorrect={false}
        onChangeText={[Function]}
        placeholder="Search languages"
        placeholderTextColor="#9CA3AF"
        style={
          [
            {
              "flex": 1,
              "fontFamily": "Inter_600SemiBold",
              "fontSize": 15,
              "padding": 0,
            },
            {
              "color": "#F9FAFB",
            },
          ]
        }
        testID="language-search"
        value=""
      />
    </View>
  </View>
  <RCTScrollView
    ListEmptyComponent={null}
    ListHeaderComponent={null}
    contentContainerStyle={
      {
        "padding": 20,
        "paddingTop": 8,
      }
    }
    data={
      [
        {
          "code": "hi",
          "fontFamily": "Noto Sans Devanagari",
          "name": "Hindi",
          "nativeName": "हिन्दी",
          "rtl": false,
          "script": "Devanagari",
        },
        {
          "code": "ur",
          "fontFamily": "Noto Nastaliq Urdu",
          "name": "Urdu",
          "nativeName": "اردو",
          "rtl": true,
          "script": "Nastaliq",
        },
        {
          "code": "ta",
          "fontFamily": "Noto Sans Tamil",
          "name": "Tamil",
          "nativeName": "தமிழ்",
          "rtl": false,
          "script": "Tamil",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    keyboardShouldPersistTaps="handled"
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    showsVerticalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              {
                "gap": 12,
              },
            ]
          }
        >
          <View
            accessibilityLabel="Hindi"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": true,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderRadius": 22,
                  "borderWidth": 1.5,
                  "flex": 1,
                  "justifyContent": "flex-end",
                  "marginBottom": 12,
                  "minHeight": 104,
                  "overflow": "hidden",
                  "padding": 16,
                  "paddingRight": 30,
                  "paddingTop": 18,
                },
                false,
                {
                  "backgroundColor": "#65a30d14",
                  "borderColor": "#65a30d",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": 5,
                  },
                  {
                    "backgroundColor": "#65a30d",
                  },
                ]
              }
              testID="lang-rail-hi"
            />
            <View
              color="#65a30d"
              name="check-circle"
              size={18}
              style={
                {
                  "position": "absolute",
                  "right": 12,
                  "top": 12,
                }
              }
            />
            <Text
              style={
                [
                  {
                    "fontFamily": "NotoSansDevanagari_700Bold",
                    "writingDirection": "ltr",
                  },
                  {
                    "fontSize": 24,
                    "textAlign": "left",
                  },
                  false,
                  {
                    "color": "#F9FAFB",
                  },
                ]
              }
            >
              हिन्दी
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 14,
                    "marginTop": 6,
                  },
                  {
                    "color": "#F9FAFB",
                  },
                ]
              }
            >
              Hindi
            </Text>
          </View>
          <View
            accessibilityLabel="Urdu"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderRadius": 22,
                  "borderWidth": 1.5,
                  "flex": 1,
                  "justifyContent": "flex-end",
                  "marginBottom": 12,
                  "minHeight": 104,
                  "overflow": "hidden",
                  "padding": 16,
                  "paddingRight": 30,
                  "paddingTop": 18,
                },
                {
                  "minHeight": 128,
                },
                {
                  "backgroundColor": "#1C1C28",
                  "borderColor": "#2D2D3D",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": 5,
                  },
                  {
                    "backgroundColor": "#047857",
                  },
                ]
              }
              testID="lang-rail-ur"
            />
            <Text
              style={
                [
                  {
                    "fontFamily": "NotoNastaliqUrdu_700Bold",
                    "writingDirection": "rtl",
                  },
                  {
                    "fontSize": 24,
                    "textAlign": "left",
                  },
                  {
                    "lineHeight": 52,
                  },
                  {
                    "color": "#F9FAFB",
                  },
                ]
              }
            >
              اردو
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 14,
                    "marginTop": 6,
                  },
                  {
                    "color": "#F9FAFB",
                  },
                ]
              }
            >
              Urdu
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              {
                "gap": 12,
              },
            ]
          }
        >
          <View
            accessibilityLabel="Tamil — locked, preview its journey"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderRadius": 22,
                  "borderWidth": 1.5,
                  "flex": 1,
                  "justifyContent": "flex-end",
                  "marginBottom": 12,
                  "minHeight": 104,
                  "overflow": "hidden",
                  "padding": 16,
                  "paddingRight": 30,
                  "paddingTop": 18,
                },
                false,
                {
                  "backgroundColor": "#252530",
                  "borderColor": "#2D2D3D",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": 5,
                  },
                  {
                    "backgroundColor": "#0284c7",
                  },
                ]
              }
              testID="lang-rail-ta"
            />
            <Text
              style={
                [
                  {
                    "fontFamily": "NotoSansTamil_700Bold",
                    "writingDirection": "ltr",
                  },
                  {
                    "fontSize": 24,
                    "textAlign": "left",
                  },
                  false,
                  {
                    "color": "#9CA3AF",
                  },
                ]
              }
            >
              தமிழ்
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 14,
                    "marginTop": 6,
                  },
                  {
                    "color": "#F9FAFB",
                  },
                ]
              }
            >
              Tamil
            </Text>
            <View
              accessibilityLabel="Free taste, then All-Access"
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "gap": 4,
                  "marginTop": 6,
                }
              }
              testID="picker-locked-ta"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderColor": "rgba(255,255,255,0.72)",
                      "borderRadius": 100,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "gap": 3,
                      "paddingHorizontal": 6,
                      "paddingVertical": 2,
                    },
                    {
                      "backgroundColor": "#22C55E",
                    },
                  ]
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontFamily": "Inter_800ExtraBold",
                        "fontSize": 9,
                        "letterSpacing": 0.4,
                        "textTransform": "uppercase",
                      },
                      {
                        "color": "#FFFFFF",
                      },
                    ]
                  }
                >
                  Free taste
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderColor": "rgba(255,255,255,0.72)",
                      "borderRadius": 100,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "gap": 3,
                      "paddingHorizontal": 6,
                      "paddingVertical": 2,
                    },
                    {
                      "backgroundColor": "#F5B31B",
                    },
                  ]
                }
              >
                <View
                  color="#4A2C00"
                  name="star"
                  size={8}
                />
                <Text
                  style={
                    [
                      {
                        "fontFamily": "Inter_800ExtraBold",
                        "fontSize": 9,
                        "letterSpacing": 0.4,
                        "textTransform": "uppercase",
                      },
                      {
                        "color": "#4A2C00",
                      },
                    ]
                  }
                >
                  All-Access
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`LanguageRow Nastaliq rendering — light theme renders the full language list including the Nastaliq row 1`] = `
<View
  testID="screen"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingHorizontal": 20,
        "paddingTop": 20,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Inter_800ExtraBold",
              "fontSize": 24,
            },
            {
              "color": "#1A1A1A",
            },
          ]
        }
      >
        Choose a language
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_600SemiBold",
              "fontSize": 13,
              "marginTop": 4,
            },
            {
              "color": "#6B7280",
            },
          ]
        }
      >
        Tap a language to switch. Each one keeps its own progress.
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "Inter_600SemiBold",
              "fontSize": 13,
              "marginTop": 4,
            },
            {
              "color": "#6B7280",
            },
          ]
        }
      >
        Locked languages start with a free taste. All-Access opens the rest.
      </Text>
    </View>
    <View
      accessibilityLabel="Close"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          },
          {
            "backgroundColor": "#F3F4F6",
          },
        ]
      }
    >
      <View
        color="#1A1A1A"
        name="x"
        size={20}
      />
    </View>
  </View>
  <View
    style={
      {
        "paddingBottom": 4,
        "paddingHorizontal": 20,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 8,
            "height": 42,
            "paddingHorizontal": 12,
          },
          {
            "backgroundColor": "#F3F4F6",
            "borderColor": "#E5E7EB",
          },
        ]
      }
    >
      <View
        color="#6B7280"
        name="search"
        size={16}
      />
      <TextInput
        autoCapitalize="none"
        autoCorrect={false}
        onChangeText={[Function]}
        placeholder="Search languages"
        placeholderTextColor="#6B7280"
        style={
          [
            {
              "flex": 1,
              "fontFamily": "Inter_600SemiBold",
              "fontSize": 15,
              "padding": 0,
            },
            {
              "color": "#1A1A1A",
            },
          ]
        }
        testID="language-search"
        value=""
      />
    </View>
  </View>
  <RCTScrollView
    ListEmptyComponent={null}
    ListHeaderComponent={null}
    contentContainerStyle={
      {
        "padding": 20,
        "paddingTop": 8,
      }
    }
    data={
      [
        {
          "code": "hi",
          "fontFamily": "Noto Sans Devanagari",
          "name": "Hindi",
          "nativeName": "हिन्दी",
          "rtl": false,
          "script": "Devanagari",
        },
        {
          "code": "ur",
          "fontFamily": "Noto Nastaliq Urdu",
          "name": "Urdu",
          "nativeName": "اردو",
          "rtl": true,
          "script": "Nastaliq",
        },
        {
          "code": "ta",
          "fontFamily": "Noto Sans Tamil",
          "name": "Tamil",
          "nativeName": "தமிழ்",
          "rtl": false,
          "script": "Tamil",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    keyboardShouldPersistTaps="handled"
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    showsVerticalScrollIndicator={false}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              {
                "gap": 12,
              },
            ]
          }
        >
          <View
            accessibilityLabel="Hindi"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": true,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderRadius": 22,
                  "borderWidth": 1.5,
                  "flex": 1,
                  "justifyContent": "flex-end",
                  "marginBottom": 12,
                  "minHeight": 104,
                  "overflow": "hidden",
                  "padding": 16,
                  "paddingRight": 30,
                  "paddingTop": 18,
                },
                false,
                {
                  "backgroundColor": "#65a30d14",
                  "borderColor": "#65a30d",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": 5,
                  },
                  {
                    "backgroundColor": "#65a30d",
                  },
                ]
              }
              testID="lang-rail-hi"
            />
            <View
              color="#65a30d"
              name="check-circle"
              size={18}
              style={
                {
                  "position": "absolute",
                  "right": 12,
                  "top": 12,
                }
              }
            />
            <Text
              style={
                [
                  {
                    "fontFamily": "NotoSansDevanagari_700Bold",
                    "writingDirection": "ltr",
                  },
                  {
                    "fontSize": 24,
                    "textAlign": "left",
                  },
                  false,
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              हिन्दी
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 14,
                    "marginTop": 6,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              Hindi
            </Text>
          </View>
          <View
            accessibilityLabel="Urdu"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderRadius": 22,
                  "borderWidth": 1.5,
                  "flex": 1,
                  "justifyContent": "flex-end",
                  "marginBottom": 12,
                  "minHeight": 104,
                  "overflow": "hidden",
                  "padding": 16,
                  "paddingRight": 30,
                  "paddingTop": 18,
                },
                {
                  "minHeight": 128,
                },
                {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#E5E7EB",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": 5,
                  },
                  {
                    "backgroundColor": "#047857",
                  },
                ]
              }
              testID="lang-rail-ur"
            />
            <Text
              style={
                [
                  {
                    "fontFamily": "NotoNastaliqUrdu_700Bold",
                    "writingDirection": "rtl",
                  },
                  {
                    "fontSize": 24,
                    "textAlign": "left",
                  },
                  {
                    "lineHeight": 52,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              اردو
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 14,
                    "marginTop": 6,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              Urdu
            </Text>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              {
                "gap": 12,
              },
            ]
          }
        >
          <View
            accessibilityLabel="Tamil — locked, preview its journey"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": false,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "borderRadius": 22,
                  "borderWidth": 1.5,
                  "flex": 1,
                  "justifyContent": "flex-end",
                  "marginBottom": 12,
                  "minHeight": 104,
                  "overflow": "hidden",
                  "padding": 16,
                  "paddingRight": 30,
                  "paddingTop": 18,
                },
                false,
                {
                  "backgroundColor": "#F3F4F6",
                  "borderColor": "#E5E7EB",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": 5,
                  },
                  {
                    "backgroundColor": "#0284c7",
                  },
                ]
              }
              testID="lang-rail-ta"
            />
            <Text
              style={
                [
                  {
                    "fontFamily": "NotoSansTamil_700Bold",
                    "writingDirection": "ltr",
                  },
                  {
                    "fontSize": 24,
                    "textAlign": "left",
                  },
                  false,
                  {
                    "color": "#6B7280",
                  },
                ]
              }
            >
              தமிழ்
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "Inter_700Bold",
                    "fontSize": 14,
                    "marginTop": 6,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              Tamil
            </Text>
            <View
              accessibilityLabel="Free taste, then All-Access"
              style={
                {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "gap": 4,
                  "marginTop": 6,
                }
              }
              testID="picker-locked-ta"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderColor": "rgba(255,255,255,0.72)",
                      "borderRadius": 100,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "gap": 3,
                      "paddingHorizontal": 6,
                      "paddingVertical": 2,
                    },
                    {
                      "backgroundColor": "#22C55E",
                    },
                  ]
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontFamily": "Inter_800ExtraBold",
                        "fontSize": 9,
                        "letterSpacing": 0.4,
                        "textTransform": "uppercase",
                      },
                      {
                        "color": "#FFFFFF",
                      },
                    ]
                  }
                >
                  Free taste
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderColor": "rgba(255,255,255,0.72)",
                      "borderRadius": 100,
                      "borderWidth": 1,
                      "flexDirection": "row",
                      "gap": 3,
                      "paddingHorizontal": 6,
                      "paddingVertical": 2,
                    },
                    {
                      "backgroundColor": "#F5B31B",
                    },
                  ]
                }
              >
                <View
                  color="#4A2C00"
                  name="star"
                  size={8}
                />
                <Text
                  style={
                    [
                      {
                        "fontFamily": "Inter_800ExtraBold",
                        "fontSize": 9,
                        "letterSpacing": 0.4,
                        "textTransform": "uppercase",
                      },
                      {
                        "color": "#4A2C00",
                      },
                    ]
                  }
                >
                  All-Access
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
